--- a/style.css
+++ b/style.css
@@ -7,3 +7,24 @@
       padding: 20px;
       border-left: 5px solid #0d6efd;
     }
+/* For Gallery Swiper Slider CSS */
+.swiper {
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      /* background: #444; */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .swiper-slide img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
