--- a/style.css
+++ b/style.css
@@ -7,6 +7,20 @@
       padding: 20px;
       border-left: 5px solid #0d6efd;
     }
+
+  /* Hero Section==section-1 CSS  */
+  .hero-section { 
+    position: relative; 
+  }
+  .hero-section .overlay {
+    position: absolute; top:0; left:0; width:100%; height:100%;
+    background: rgba(0,0,0,0.6);
+    z-index: 0;
+  }
+  .hero-section .container {
+     z-index: 1; 
+  }
+
 /* For Gallery Swiper Slider CSS */
 .swiper {
       width: 100%;
@@ -28,3 +42,18 @@
       height: 100%;
       object-fit: cover;
     }
+
+
+.for-title-position{
+bottom: 0px;
+left: 0px;
+height: 25%;
+width: 100%; 
+background: linear-gradient(to top, rgba(0,123,255,1.2), transparent);
+}
+
+.for-title-position>h5{
+    font-size: 25px;
+    font-weight: 800;
+
+}
